Added 'questionnaires' to menu, started implementing first questionnaire (vita16), cholesterol measurment details show 'status indication' colors

--- a/www/index.html
+++ b/www/index.html
@@ -25,20 +25,15 @@
     <!-- Lib and app stylesheets -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="lib/angular-timeline/dist/angular-timeline.css" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="lib/plottable/plottable.css">
     <link href="lib/omh-web-visualizations/dist/omh-web-visualizations-all.css" rel="stylesheet">
-
-    <link href="assets/css/style.css" rel="stylesheet">
-
-
+    <link rel="stylesheet" type="text/css" href="lib/plottable/plottable.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- angular directives -->
     <script src="lib/angular-messages/angular-messages.js"></script>
-
     <script src="lib/Angular.uuid2/dist/angular-uuid2.min.js "></script>
     <script src="lib/angular-timeline/dist/angular-timeline.js"></script>
     <script src="lib/angular-indexedDB/angular-indexed-db.js"></script>
@@ -95,6 +90,11 @@
     <script src="app/cholesterol/cholesterol.controller.js"></script>
     <script src="app/cholesterol/cholesterol_create.controller.js"></script>
     <script src="app/cholesterol/cholesterol.service.js"></script>
+
+    <!-- Vita16 logic -->
+    <script src="app/vita16/vita16.controller.js"></script>
+    <script src="app/vita16/vita16_answer.controller.js"></script>
+    <script src="app/vita16/vita16.service.js"></script>
 
     <!-- Remarks logic -->
     <script src="app/remarks/remarks.controller.js"></script>
