veranderingen in taal en toevoeging trhresholds glucose

--- a/www/app/bloodglucose/detail.html
+++ b/www/app/bloodglucose/detail.html
@@ -1,4 +1,9 @@
 <ion-view view-title="Blood glucose details">
+ <ion-nav-buttons side="secondary">
+    <a href="#/app/bloodglucose/info" class="button">
+      <i class="ion ion-information-circled"></i>
+    </a>
+  </ion-nav-buttons>
   <ion-content class="padding">
     <ion-list>
       <ion-item>
