--- a/www/app/bloodglucose/info.html
+++ b/www/app/bloodglucose/info.html
@@ -1,19 +1,26 @@
 <ion-view view-title="Glucose">
   <ion-content class="padding">
-    <h1>Tips voor verhoogd bloed glucose</h1>
+    <h1>Informatie over bloed glucose</h1>
     <p>
       Als u een verhoogd bloedglucose heeft dan vindt u hieronder een aantal adviezen en tips
     </p>
     <p>
-      Eet meer producten met een lage glycemische index.    </p>
+     Glucose is een vorm van suiker die door ons lichaam wordt omgezet in energie. Na het eten of drinken worden koolhydraten uit de voeding als glucose opgenomen in het bloed. De hoeveelheid glucose in het bloed wordt door het lichaam in balans gehouden. 
+Wanneer dit mechanisme uit balans is, is er sprake van (pre)diabetes.     </p>
     <p>
-      Nulla molestie, turpis sed tempor pharetra, nibh eros commodo magna, in dictum ante velit aliquam orci.
+      Heb je de glucosemeting nuchter gedaan (na 8 uur niet eten en drinken)?
+Dan is er sprake van een gezonde waarde als deze lager is dan 6,1 mmol/l.
     </p>
     <p>
-      Integer eleifend molestie purus et dictum. Mauris congue posuere enim, at iaculis orci imperdiet eu. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer eget ligula sed justo dictum vulputate luctus at enim.
+     Heb je de glucosemeting na een maaltijd of een ‘challenge test’ gedaan?
+Dan is er sprake van een gezonde waarde als deze twee uur na de maaltijd onder de 7,8 mmol/l is. 
     </p>
     <p>
-      Cras consectetur augue neque, nec vestibulum eros iaculis egestas. Etiam malesuada neque enim, ac convallis nisi luctus facilisis.
     </p>
   </ion-content>
 </ion-view>
+
+
+ 
+
+
