--- a/www/app/timeline/add_menu.html
+++ b/www/app/timeline/add_menu.html
@@ -2,22 +2,22 @@
   <ion-content>
     <div class="list">
       <a class="item" href="#/app/bloodpressure/add" ng-click="popover.hide()">
-        Blood Pressure
+        Bloeddruk
       </a>
       <a class="item" href="#/app/bloodglucose/add" ng-click="popover.hide()">
-        Blood Glucose
+        Bloedglucose
       </a>
       <a class="item" href="#/app/cholesterol/add" ng-click="popover.hide()">
         Cholesterol
       </a>
       <a class="item" href="#/app/bodyweight/add" ng-click="popover.hide()">
-        Body weight
+        Lichaamsgewicht
       </a>
       <a class="item" href="#/app/bmi/add" ng-click="popover.hide()">
         BMI
       </a>
       <a class="item" href="#/app/remarks/add" ng-click="popover.hide()">
-        Remark
+        Opmerking
       </a>
     </div>
   </ion-content>
