Implemented page to enter personal static data

--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,13 @@
     <script src="app/generic/detail.controller.js"></script>
     <script src="app/generic/info.controller.js"></script>
     <script src="app/generic/datapoints.service.js"></script>
+    <script src="app/generic/static.datapoints.service.js"></script>
+
+    <!-- Personal data logic -->
+    <script src="app/personal/personal.controller.js"></script>
+    <script src="app/personal/bodyheight.service.js"></script>
+    <script src="app/personal/dateofbirth.service.js"></script>
+    <script src="app/personal/gender.service.js"></script>
 
     <!-- Timeline logic -->
     <script src="app/timeline/timeline.controller.js"></script>
