Showing static entry page when application starts

--- a/www/app/layout.html
+++ b/www/app/layout.html
@@ -21,6 +21,9 @@
         <ion-item menu-close href="#/app/intro">
           Intro
         </ion-item>
+        <ion-item menu-close href="#/app/personal_data">
+          Algemene metingen
+        </ion-item>
         <ion-item menu-close href="#/app/timeline">
           Tijdlijn
         </ion-item>
