--- a/www/app/vita16/feedback.html
+++ b/www/app/vita16/feedback.html
@@ -8,6 +8,7 @@
     </a>
   </ion-nav-buttons>
   <ion-content class="padding vita16-container">
-    Here you will receive feedback
+    Answered Vita16 {{vita16.vita16.length}} time(s)<br/>
+    Total number of questionnaires answerd: {{vita16.all.length}}
   </ion-content>
 </ion-view>
