--- a/www/index.html
+++ b/www/index.html
@@ -59,9 +59,11 @@
     <!-- Generic datapoint logic -->
     <script src="app/generic/chart.controller.js"></script>
     <script src="app/generic/create.controller.js"></script>
+    <script src="app/generic/answer.controller.js"></script>
     <script src="app/generic/detail.controller.js"></script>
     <script src="app/generic/info.controller.js"></script>
     <script src="app/generic/datapoints.service.js"></script>
+    <script src="app/generic/answers.service.js"></script>
 
     <!-- Timeline logic -->
     <script src="app/timeline/timeline.controller.js"></script>
