--- a/www/index.html
+++ b/www/index.html
@@ -88,6 +88,11 @@
     <script src="app/bodyweight/bodyweight_create.controller.js"></script>
     <script src="app/bodyweight/bodyweight.service.js"></script>
 
+    <!-- Body fat logic -->
+    <script src="app/bodyfat/bodyfat.controller.js"></script>
+    <script src="app/bodyfat/bodyfat_create.controller.js"></script>
+    <script src="app/bodyfat/bodyfat.service.js"></script>
+
     <!-- BMI logic -->
     <script src="app/bmi/bmi.controller.js"></script>
     <script src="app/bmi/bmi_create.controller.js"></script>
