Added page to enter body measurements

--- a/www/app/layout.html
+++ b/www/app/layout.html
@@ -24,6 +24,9 @@
         <ion-item menu-close href="#/app/personal_data">
           Algemene metingen
         </ion-item>
+        <ion-item menu-close href="#/app/body_measurements">
+          Lichaamsmetingen
+        </ion-item>
         <ion-item menu-close href="#/app/timeline">
           Tijdlijn
         </ion-item>
