--- a/www/index.html
+++ b/www/index.html
@@ -70,6 +70,9 @@
     <script src="app/personal/dateofbirth.service.js"></script>
     <script src="app/personal/gender.service.js"></script>
 
+    <!-- Body measurements logic -->
+    <script src="app/bodymeasurements/bodymeasurements.controller.js"></script>
+
     <!-- Timeline logic -->
     <script src="app/timeline/timeline.controller.js"></script>
 
@@ -102,6 +105,11 @@
     <script src="app/cholesterol/cholesterol.controller.js"></script>
     <script src="app/cholesterol/cholesterol_create.controller.js"></script>
     <script src="app/cholesterol/cholesterol.service.js"></script>
+
+    <!-- Waist circumference logic -->
+    <script src="app/waistcircumference/waistcircumference.controller.js"></script>
+    <script src="app/waistcircumference/waistcircumference_create.controller.js"></script>
+    <script src="app/waistcircumference/waistcircumference.service.js"></script>
 
     <!-- Vita16 logic -->
     <script src="app/vita16/vita16.controller.js"></script>
