Fixed a bug in loading javascripts

--- a/www/index.html
+++ b/www/index.html
@@ -95,6 +95,11 @@
     <script src="app/bodyweight/bodyweight_create.controller.js"></script>
     <script src="app/bodyweight/bodyweight.service.js"></script>
 
+    <!-- Body fat logic -->
+    <script src="app/bodyfat/bodyfat.controller.js"></script>
+    <script src="app/bodyfat/bodyfat_create.controller.js"></script>
+    <script src="app/bodyfat/bodyfat.service.js"></script>
+
     <!-- BMI logic -->
     <script src="app/bmi/bmi.controller.js"></script>
     <script src="app/bmi/bmi_create.controller.js"></script>
@@ -104,6 +109,11 @@
     <script src="app/cholesterol/cholesterol.controller.js"></script>
     <script src="app/cholesterol/cholesterol_create.controller.js"></script>
     <script src="app/cholesterol/cholesterol.service.js"></script>
+
+    <!-- Waist circumference logic -->
+    <script src="app/waistcircumference/waistcircumference.controller.js"></script>
+    <script src="app/waistcircumference/waistcircumference_create.controller.js"></script>
+    <script src="app/waistcircumference/waistcircumference.service.js"></script>
 
     <!-- Vita16 logic -->
     <script src="app/vita16/vita16.controller.js"></script>
