Bugfix in remark creation

--- a/www/app/remarks/create.html
+++ b/www/app/remarks/create.html
@@ -12,7 +12,7 @@
           <div class="input-label">
             Remark
           </div>
-          <textarea ng-model="remarks.data.message"></textarea>
+          <textarea ng-model="remarks.data.body.message"></textarea>
         </ion-item>
       </ion-list>
       <p class="padding">
