Added body fat percentage and waist circumference to timeline

--- a/www/app/bodyfat/detail.html
+++ b/www/app/bodyfat/detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Body weight details">
+<ion-view view-title="Body fat percentage details">
   <ion-content class="padding">
     <ion-list>
       <ion-item>
