Minified javascripts and css and renamed image files

--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Healthcafe">
   <ion-content class="padding initial">
-    <div class="app-logo"><img src="assets/img/foto_health_cafe_app" /></div>
+    <div class="app-logo"><img src="assets/img/foto_health_cafe_app.jpg" /></div>
 
     <p>
 <b>Welkom bij de TNO HealthCafé App.   </b> </p>
