--- a/www/app/bloodglucose/info.html
+++ b/www/app/bloodglucose/info.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Glucose">
   <ion-content class="padding">
-    <h1>Informatie over bloed glucose</h1>
+    <b>Informatie over bloed glucose</b>
     <p>
       Als u een verhoogd bloedglucose heeft dan vindt u hieronder een aantal adviezen en tips
     </p>
