--- a/www/app/bloodpressure/info.html
+++ b/www/app/bloodpressure/info.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Blood pressure">
   <ion-content class="padding">
-    <h1>Information over bloeddruk</h1>
+    <b>Information over bloeddruk</b>
     <p>
       Bloeddruk is de kracht waarmee het hart het bloed de vaten inpompt. Hierdoor ontstaat er een druk op de vaten. Bij een te hoge bloeddruk (hypertensie) is deze druk zo hoog, dat de wanden van de hartvaten beschadigd raken.
 </p>
@@ -10,7 +10,7 @@
 <p>
 Bij een gezonde bloeddruk is de bovendruk 135 mmHg of lager, en de onderdruk 90 mmHg of lager.
 </p>
-<h1>Een te hoge bloeddruk?</h1>
+<b>Een te hoge bloeddruk?</b>
 <p>
 Eet minder zout. Onderzoek heeft aangetoond dat minder zout eten uw bloeddruk kan helpen verlagen.  Klik hier voor meer achtergrondinformatie. 
 Wilt u weten hoeveel zout er in producten zit? Ga dan naar deze website. 
