--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Healthcafe">
   <ion-content class="padding initial">
-    <div class="app-logo"><img src="assets/img/foto_health_cafe_app" /></div>
+    <div class="app-logo"><img src="assets/img/foto_health_cafe_app.jpg" /></div>
 
     <p>
-<b>Welkom bij de TNO HealthCafé App.   </b> </p>
+<b>Welkom bij de TNO HealthCafé App. </b> </p>
     <p>
 Deze App kunt u gebruiken om een aantal aspecten van uw gezondheid te registreren. Deze App wordt aangeboden als service, het is dus aan u of en hoe lang u de App wilt gebruiken.
 De App kunt u gebruiken om uw persoonlijke gezondheidsdata te bewaren, trends en grafieken van uw data te bekijken, en om tips en adviezen te krijgen.
@@ -17,8 +17,11 @@ Op dit moment kunt u gezondheidsdata toevoegen over uw bloeddruk, cholesterol, g
 Ook kunt u opmerkingen toevoegen, bijvoorbeeld als u bent gestart met een interventie om uw gezondheid te verbeteren kunt u dat vastleggen in de App. Deze opmerkingen ziet u dan ook terug in uw tijdlijn. Op die manier kunt u eenvoudig terugzien of uw interventie succesvol is geweest.
 
 Via het menu kunt u er ook voor kiezen om alleen de data van één specifieke meting te zien, bijvoorbeeld bloeddruk. Wanneer u daarop klikt, ziet u alle door u ingevoerde bloeddrukwaarden terug in een grafiek. Rechtsboven in het scherm kunt u klikken op de ‘+’ om meer data toe te voegen, of op de ‘i’ om meer informatie te lezen over bloeddruk.
-    </p>
-    <p>
+</p>
+<p>
+Wilt u op de hoogte gehouden worden van veranderingen en verbeteringen van de HealthCafe App? Meldt u zich dan aan via <A HREF="mailto:info@tnostudie.nl">info@tnostudie.nl</A>
+</p>
+<p>
 Wilt u starten met het toevoegen van uw gezondheidsdata? Klik dan op ‘naar de data’ hieronder.
 </p>
 
