--- a/www/app/layout.html
+++ b/www/app/layout.html
@@ -13,7 +13,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-stable bar-energized">
       <h1 class="title">Healthcafe</h1>
     </ion-header-bar>
     <ion-content>
