aanpassingen info files

--- a/www/app/bloodpressure/info.html
+++ b/www/app/bloodpressure/info.html
@@ -12,15 +12,18 @@ Bij een gezonde bloeddruk is de bovendruk 135 mmHg of lager, en de onderdruk 90 
 </p>
 <b>Een te hoge bloeddruk?</b>
 <p>
-Eet minder zout. Onderzoek heeft aangetoond dat minder zout eten uw bloeddruk kan helpen verlagen.  Klik hier voor meer achtergrondinformatie. 
-Wilt u weten hoeveel zout er in producten zit? Ga dan naar deze website. 
+Eet minder zout. Onderzoek heeft aangetoond dat minder zout eten uw bloeddruk kan helpen verlagen.  Klik 
+<a href="http://www.sciencedirect.com/science/article/pii/S0033062006000831">hier</a>
+ voor meer achtergrondinformatie. 
+Wilt u meer weten over hoe u uw zoutinname kunt beperken? Ga dan naar deze <a href="http://www.voedingscentrum.nl/nl/service/vraag-en-antwoord/gezonde-voeding-en-voedingsstoffen/hoe-eet-ik-minder-zout.aspx">website</a>. 
 </p>
  <p>
-Eet dagelijks ten minste 200 gram groente en ten minste 200 gram fruit; deze bevatten namelijk kalium dat de bloeddruk-verhogende werking van natrium (keukenzout) tegen gaat. Lees hier meer. 
+Eet dagelijks ten minste 200 gram groente en ten minste 200 gram fruit; deze bevatten namelijk kalium dat de bloeddruk-verhogende werking van natrium (keukenzout) tegen gaat. Lees <a href="http://www.voedingscentrum.nl/encyclopedie/hoge-bloeddruk.aspx">hier</a> meer. 
  </p>
 <p>
-Eet volkoren graanproducten. Onderzoek heeft uitgewezen dat dit bijdraagt aan een lagere bloeddruk. Meer informatie? Klik hier.
+Eet volkoren graanproducten. Onderzoek heeft uitgewezen dat dit bijdraagt aan een lagere bloeddruk. Meer informatie? Klik <a href="https://www.gezondheidsraad.nl/sites/default/files/a1511_granen_en_graanproducten_0.pdf">hier</a>.
 </p> 
  
 </ion-content>
 </ion-view>
+
