--- a/www/app/bmi/info.html
+++ b/www/app/bmi/info.html
@@ -1,20 +1,21 @@
 <ion-view view-title="BMI">
   <ion-content class="padding">
-    <h1>Information about BMI</h1>
+    <h1>Informatie over lichaamsgewicht & BMI</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod felis et odio accumsan, in sagittis dui tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse molestie congue semper. Suspendisse finibus egestas erat semper placerat. Duis et nunc mauris. Aenean ac cursus est, vitae euismod urna.
+      Een gezond gewicht is belangrijk. Overgewicht en obesitas vergroten namelijk de kans op welvaartsziekten zoals diabetes en hart- en vaatziekten. 
     </p>
     <p>
-      Praesent feugiat efficitur tincidunt. Ut massa elit, hendrerit non turpis eget, convallis sollicitudin ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus nisi quis fringilla efficitur. Proin fringilla lacus dapibus erat luctus, a mattis ligula congue.
+      Je gewicht alleen zegt echter niet zo veel. Daarom wordt de “Body Mass Index” (ofwel BMI) gebruikt. Dit is de verhouding tussen je gewicht en je lengte. 
     </p>
     <p>
       Nulla molestie, turpis sed tempor pharetra, nibh eros commodo magna, in dictum ante velit aliquam orci.
     </p>
     <p>
-      Integer eleifend molestie purus et dictum. Mauris congue posuere enim, at iaculis orci imperdiet eu. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer eget ligula sed justo dictum vulputate luctus at enim.
+      Een gezonde BMI zit tussen de 18,5 en de 25. Bij een lager BMI is er sprake van ondergewicht. Bij een BMI hoger dan 25 heb je overgewicht. Is je BMI meer dan 30? Dan heb je obesitas. 
+
     </p>
-    <p>
-      Cras consectetur augue neque, nec vestibulum eros iaculis egestas. Etiam malesuada neque enim, ac convallis nisi luctus facilisis.
-    </p>
+    <b>
+      Een te hoge BMI? Probeer af te vallen.
+    </b>
   </ion-content>
 </ion-view>
